lien vers portolio gamifié

--- a/html/projets.html
+++ b/html/projets.html
@@ -285,7 +285,7 @@
                             Le principe est simple : avec la souris, on guide un petit personnage au travers de la sc&egrave;ne, o&ugrave; sont dispers&eacute;s les diff&eacute;rents projets du portfolio ; il s'agit des m&ecirc;mes projets pr&eacute;sent&eacute;s sur cette page-ci.
                         </p>
                         <p>
-                            Cliquer <a href="" title="colors lab sur itch.io">ici</a> pour acc&eacute;der &agrave; la page.
+                            Cliquer <a href="https://marinpoux.github.io/marin.portfolio/" title="portolio gamifi&eacute;">ici</a> pour acc&eacute;der &agrave; la page (la page peut prendre un peu de temps &agrave; charger).
                         </p>
                         <p>
                             Il s'agit d'un projet qui se veut d'&ecirc;tre agr&eacute;ment&eacute; dans le temps ; si tous les projets ne sont pas encore impl&eacute;ment&eacute;s ou que la page n'est pas disponible, cela ne saura tarder.
